fixed screen right gap issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+html,body
+{
+    width: 100%;
+    height: auto;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
